[package]
name = "mh-z19"
version = "0.1.0"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2018"
exclude = [
    "*.iml",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zenria/mh-z19-rs"
description = "Implementation of serial protocol for Winsen MH-Z19 CO2 sensor"
keywords=["mhz19", "mh-z19", "mh_z19"]

[dependencies]
