[package]
name = "mh-z19"
version = "0.3.0"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2018"
exclude = [
    "*.iml",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zenria/mh-z19-rs"
description = "Implementation of serial protocol for Winsen MH-Z19 / MH-Z19B / MH-Z14 CO2 sensors"
keywords=["mhz19", "mh-z19", "mh_z19"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]

[features]
default = []
std = []
